# GMP_Generator_Engine

./: .gitignore  3.31版可研报告(2)_2.docx  README.md  REFERENCE_ARTIFACTS.md  pyproject.toml
.tmp_docx_extract/: ReadMe.md  report_paragraphs.txt
.tmp_docx_extract/unzipped/: ReadMe.md  [Content_Types].xml
configs/: ReadMe.md  kpi_weights.json  module_catalog.json
dev/llm_codegen/: .env.example  01_idea_backup_2026-04-07.md  02_architecture.md  04_development_tasks.md  (+12 more)
knowledge_base/: component_modules_kb.json  component_modules_kb.md  component_modules_kb_v2.json  component_modules_kb_v2_report.md
outputs/: ReadMe.md
src/: ReadMe.md
tests/: ReadMe.md  test_cli_and_config.py  test_parser.py  test_pipeline.py
v2/: README.md  _loop_ids_pid_test.json  _loop_ids_smc_test.json  _pid_ctl_main.generated.c  _pid_ctl_main.generated.h  _pid_paras.generated.h  _smc_ctl_main.generated.c  _smc_ctl_main.generated.h  controller_core_structure.json  controller_core_structure_cn_test.json  controller_core_structure_exporter.py  controller_core_structure_generated.json  controller_loop_id_exporter.py  controller_loop_ids.json  controller_loop_ids_api_test.json  controller_loop_ids_cn_test.json  controller_loop_ids_cn_test_a.json  controller_loop_ids_from_core.json  controller_loop_ids_from_core_generated.json  controller_loop_ids_generated.json  controller_structure_exporter.py  controller_structure_generator.py  ctl_main.generated.c  ctl_main.generated.h  generate_loop_ids_from_core.py  llm_settings.json  merge_loop_ids_into_ctl_main.py  paras.generated.h  run_llm_to_program.py
(+65 files in other folders)
